--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "download-git-repo": "^3.0.2"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "semantic-release": "^19.0.2"
   },
   "release": {
@@ -26,11 +28,18 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    ["@semantic-release/github", {
-      "assets": [
-        {"path": "bin/index.js", "label": "js index"},
-        {"path": "package.json", "label": "pk json"}
-      ]
-    }]
+    "@semantic-release/changelog",
+    "@semantic-release/npm",
+    [
+        "@semantic-release/git",
+        {
+            "assets": [
+                "package.json",
+                "CHANGELOG.md"
+            ],
+            "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+    ],
+    "@semantic-release/github"
   ]
 }
