--- a/package.json
+++ b/package.json
@@ -28,18 +28,24 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
+    [
+      "@semantic-release/changelog",
+      {
+          "changelogFile": "CHANGELOG.md",
+          "changelogTitle": "# my-changelog-test"
+      }
+    ],
     "@semantic-release/npm",
+    "@semantic-release/github",
     [
         "@semantic-release/git",
         {
             "assets": [
-                "package.json",
-                "CHANGELOG.md"
-            ],
-            "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                "bin",
+                "CHANGELOG.md",
+                "package.json"
+            ]
         }
-    ],
-    "@semantic-release/github"
+    ]
   ]
 }
